# MaidSafe-Launcher

./: CMakeLists.txt  README.md
docs/: AppSessionKey.md
include/maidsafe/launcher/: client_interface.h  directory_info.h
src/maidsafe/launcher/: account.cc  account.h  account_getter.cc  account_getter.h  account_handler.cc  account_handler.h  app_details.cc  app_details.h  app_handler.cc  app_handler.h  app_handshake.cc  app_handshake.h  client_interface.cc  launch.h  launcher.cc  launcher.h  launcher_main.cc  private_client.cc  private_client.h  types.h
src/maidsafe/launcher/tests/: account_getter_test.cc  account_handler_test.cc  account_test.cc  app_details_test.cc  app_handler_test.cc  directory_info_test.cc  dummy_app.cc  launcher_test.cc  private_client_test.cc  test_main.cc  test_utils.cc  test_utils.h
src/maidsafe/launcher/ui/: CMakeLists.txt  app_icon.rc  main.cc  main_resource.qrc
src/maidsafe/launcher/ui/_design/mockups/illustrator_file/: app_launcher.ai
src/maidsafe/launcher/ui/_design/mockups/illustrator_files/: add_app.ai  app_data.ai  group.ai  home.ai  home_list_view.ai  log_out.ai  login_create.ai  old_uis.ai  search.ai  search_list_view.ai  top-bar-windows.ai  top_bar_Linux.ai  top_bar_OSX.ai  top_bar_Windows.ai  window_unfocussed.ai
src/maidsafe/launcher/ui/_design/resources/app logo/: launcher-app-logo.ai
src/maidsafe/launcher/ui/controllers/: account_handler_controller.cc  account_handler_controller.h  application.cc  application.h  main_controller.cc  main_controller.h  main_window.cc  main_window.h
src/maidsafe/launcher/ui/custom_components/: BlueButton.qml  ButtonBase.qml  ClickableText.qml  CustomLabel.qml  CustomText.qml  CustomTextField.qml  CustomTitleBar.qml  CustomTitleBarLinux.qml  CustomTitleBarMacOs.qml  CustomTitleBarWindows.qml  FloatingStatusBox.qml  GreyButton.qml  LoadingAnimation.qml  ProfileMenu.qml  Rocket.qml  SearchTextField.qml  ViewTypeSelector.qml
src/maidsafe/launcher/ui/helpers/: application.cc  application.h  main_window.cc  main_window.h  qt_pop_headers.h  qt_push_headers.cc  qt_push_headers.h  raii_dispatcher.h
src/maidsafe/launcher/ui/models/: account_handler_model.cc  account_handler_model.h  api_model.cc  api_model.h
src/maidsafe/launcher/ui/resources/js/: brushes.js  password_strength.js
src/maidsafe/launcher/ui/resources/translations/: en.ts  es.ts  fr.ts
src/maidsafe/launcher/ui/views/: MainWindow.qml
src/maidsafe/launcher/ui/views/account_handling/: AccountHandlerView.qml  CreateAccount.qml  LoadingView.qml  Login.qml  LoginForm.qml  LoginView.qml  RegisterForm.qml
src/maidsafe/launcher/ui/views/account_handling/detail/: AccountHandlerBrushes.qml  AccountHandlerProperties.qml  CreateAccountUserInputColumn.qml
src/maidsafe/launcher/ui/views/application_manager/: ApplicationManager.qml
src/maidsafe/launcher/ui/views/detail/: DragMainWindowHelper.qml  GlobalBrushes.qml  GlobalProperties.qml  ResizeMainWindowHelper.qml
